Adjust styles in index.html for layout and effects
Increased padding in the main container and adjusted overflow properties. Added mix-blend-mode to the image for visual effects.

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 20px;
+            padding: 40px 20px;
             position: relative;
-            overflow: hidden;
+            overflow-x: hidden;
         }
 
         body::before {
@@ -55,6 +55,8 @@
             height: auto;
             margin: 0 auto;
             display: block;
+            background: transparent;
+            mix-blend-mode: screen;
         }
 
         .tagline {
