--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         body {
             font-family: 'Montserrat', sans-serif;
-            background: #0d0d0d;
+            background: #121212;
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -33,7 +33,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: radial-gradient(ellipse at center, rgba(45, 27, 78, 0.1) 0%, rgba(13, 13, 13, 0) 70%);
+            background: radial-gradient(ellipse at center, rgba(45, 27, 78, 0.08) 0%, rgba(18, 18, 18, 0) 70%);
             pointer-events: none;
         }
 
