Change background colors in index.html
Updated background colors for body and gradient.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         body {
             font-family: 'Montserrat', sans-serif;
-            background: #121212;
+            background: #0f0f0f;
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -33,7 +33,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: radial-gradient(ellipse at center, rgba(45, 27, 78, 0.08) 0%, rgba(18, 18, 18, 0) 70%);
+            background: radial-gradient(ellipse at center, rgba(45, 27, 78, 0.09) 0%, rgba(15, 15, 15, 0) 70%);
             pointer-events: none;
         }
 
