Make phone and email contact information clickable
Updated contact information to be clickable links.

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
         
         <div class="footer">
             📍 Proche de Meulan (78)<br>
-            📞 06 18 63 20 23<br>
-            📧 leo.studioroads@gmail.com
+            📞 <a href="tel:+33618632023" style="color: inherit; text-decoration: none;">06 18 63 20 23</a><br>
+            📧 <a href="mailto:leo.studioroads@gmail.com" style="color: inherit; text-decoration: none;">leo.studioroads@gmail.com</a>
         </div>
     </div>
 </body>
